// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "dataLoaded": false,
    "dataSaving": false,
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "hrefto": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [],
    "project": Object {},
    "updateProject": [Function],
  },
  "html": "
 <ul class=\\"breadcrumb\\">
   <li>
     <a href=\\"/\\"> Projects </a>
   </li>
   <!--0-->
   <li></li>
 </ul>
 <!--0-->
 <!--0-->
 <!--0-->
 <!--0-->
 <!--1-->
 <!--0-->
",
}
`;

exports[`renders correctly 2`] = `
Object {
  "Options": Object {
    "ID": "component",
    "dataLoaded": true,
    "dataSaving": false,
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "hrefto": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [],
    "project": Object {
      "cwd": "/tmp/",
      "id": 1,
      "name": "Test",
    },
    "updateProject": [Function],
  },
  "html": "
 <ul class=\\"breadcrumb\\">
   <li>
     <a href=\\"/\\"> Projects </a>
   </li>
   <li>
     <a href=\\"undefined\\">Test</a>
   </li>
   <!--0-->
   <!--0-->
   <li>Edit</li>
 </ul>
 <!--0-->
 <!--0-->
 <!--0-->
 <!--0-->
 <div class=\\"project-create-form\\">
   <form>
     <div class=\\"group\\">
       <input name=\\"name\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
       <label>Name</label>
     </div>
     <div class=\\"group\\">
       <input name=\\"cwd\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
       <label>Current Work Directory</label>
     </div>
     <div class=\\"group\\">
       <button type=\\"submit\\"><span>Update</span></button>
     </div>
   </form>
 </div>
 <!--1-->
 <!--0-->
 <!--1-->
 <!--0-->
",
}
`;

exports[`update fail 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "dataLoaded": true,
    "dataSaving": false,
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "hrefto": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [
      "Update project fail!",
    ],
    "project": Object {
      "cwd": "/tmp/",
      "id": 1,
      "name": "Test",
    },
    "updateProject": [Function],
  },
  "html": "
 <ul class=\\"breadcrumb\\">
   <li>
     <a href=\\"/\\"> Projects </a>
   </li>
   <li>
     <a href=\\"undefined\\">Test</a>
   </li>
   <!--0-->
   <!--0-->
   <li>Edit</li>
 </ul>
 <!--0-->
 <!--0-->
 <ul class=\\"errors-panel\\">
   <li>Update project fail!</li>
 </ul>
 <!--0-->
 <!--0-->
 <div class=\\"project-create-form\\">
   <form>
     <div class=\\"group\\">
       <input name=\\"name\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
       <label>Name</label>
     </div>
     <div class=\\"group\\">
       <input name=\\"cwd\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
       <label>Current Work Directory</label>
     </div>
     <div class=\\"group\\">
       <button type=\\"submit\\"><span>Update</span></button>
     </div>
   </form>
 </div>
 <!--1-->
 <!--0-->
 <!--1-->
 <!--0-->
",
}
`;
